--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
 
         document.getElementById("accessButton").addEventListener("click", () => {
             const password = document.getElementById("passwordInput").value;
-            if (password === "aa") {
+            if (password === "weareeffrance") {
                 document.getElementById("popup").style.display = "none";
                 document.getElementById("popupContent").style.display = "flex";
             } else {
