--- a/index.html
+++ b/index.html
@@ -183,64 +183,64 @@
         </div>
     </div>
 
-    <div id="popupContent" class="popup">
-        <div class="popup-content">
-            <h2>Personnalisez les cadeaux</h2>
-            <div class="popup-section">
-                <div class="popup-left">
-                   <h3>Roue 1</h3>
-                    <!-- Champs pour les cadeaux 1 à 12 pour Roue 1 -->
-                    <label for="gift1_1">Cadeau 1 :</label><input type="text" id="gift1_1" value="Cadeau  🎁"><br>
-                    <label for="gift2_1">Cadeau 2 :</label><input type="text" id="gift2_1" value="Cadeau  🎁"><br>
-                    <label for="gift3_1">Cadeau 3 :</label><input type="text" id="gift3_1" value="Cadeau  🎁"><br>
-                    <label for="gift4_1">Cadeau 4 :</label><input type="text" id="gift4_1" value="Cadeau  🎁"><br>
-                    <label for="gift5_1">Cadeau 5 :</label><input type="text" id="gift5_1" value="Cadeau  🎁"><br>
-                    <label for="gift6_1">Cadeau 6 :</label><input type="text" id="gift6_1" value="Cadeau  🎁"><br>
-                    <label for="gift7_1">Cadeau 7 :</label><input type="text" id="gift7_1" value="Cadeau  🎁"><br>
-                    <label for="gift8_1">Cadeau 8 :</label><input type="text" id="gift8_1" value="Cadeau  🎁"><br>
-                    <label for="gift9_1">Cadeau 9 :</label><input type="text" id="gift9_1" value="Cadeau  🎁"><br>
-                    <label for="gift10_1">Cadeau 10 :</label><input type="text" id="gift10_1" value="Cadeau  🎁"><br>
-                    <label for="gift11_1">Cadeau 11 :</label><input type="text" id="gift11_1" value="Cadeau  🎁"><br>
-                    <label for="gift12_1">Cadeau 12 :</label><input type="text" id="gift12_1" value="Cadeau  🎁"><br>
-                </div>
-                <div class="popup-right">
-                    <h3>Roue 2</h3>
-                    <!-- Champs pour les cadeaux 1 à 12 pour Roue 2 -->
-                    <label for="gift1_2">Cadeau 1 :</label><input type="text" id="gift1_2" value="Cadeau  🎁"><br>
-                    <label for="gift2_2">Cadeau 2 :</label><input type="text" id="gift2_2" value="Cadeau  🎁"><br>
-                    <label for="gift3_2">Cadeau 3 :</label><input type="text" id="gift3_2" value="Cadeau  🎁"><br>
-                    <label for="gift4_2">Cadeau 4 :</label><input type="text" id="gift4_2" value="Cadeau  🎁"><br>
-                    <label for="gift5_2">Cadeau 5 :</label><input type="text" id="gift5_2" value="Cadeau  🎁"><br>
-                    <label for="gift6_2">Cadeau 6 :</label><input type="text" id="gift6_2" value="Cadeau  🎁"><br>
-                    <label for="gift7_2">Cadeau 7 :</label><input type="text" id="gift7_2" value="Cadeau  🎁"><br>
-                    <label for="gift8_2">Cadeau 8 :</label><input type="text" id="gift8_2" value="Cadeau  🎁"><br>
-                    <label for="gift9_2">Cadeau 9 :</label><input type="text" id="gift9_2" value="Cadeau  🎁"><br>
-                    <label for="gift10_2">Cadeau 10 :</label><input type="text" id="gift10_2" value="Cadeau  🎁"><br>
-                    <label for="gift11_2">Cadeau 11 :</label><input type="text" id="gift11_2" value="Cadeau  🎁"><br>
-                    <label for="gift12_2">Cadeau 12 :</label><input type="text" id="gift12_2" value="Cadeau  🎁"><br>
-                </div>
-            </div>
-            <div class="popup-section">
-                <div class="popup-left">
-                    <h3>Roue 3</h3>
+<div id="popupContent" class="popup">
+    <div class="popup-content">
+        <h2>Personnalisez les cadeaux</h2>
+        <div class="popup-section">
+            <div class="popup-left">
+                <h3>Roue 3</h3>
+                <label for="gift1_1">Cadeau 1 :</label><input type="text" id="gift1_1" value="Cadeau  🎁"><br>
+                <label for="gift2_1">Cadeau 2 :</label><input type="text" id="gift2_1" value="Cadeau  🎁"><br>
+                <label for="gift3_1">Cadeau 3 :</label><input type="text" id="gift3_1" value="Cadeau  🎁"><br>
+                <label for="gift4_1">Cadeau 4 :</label><input type="text" id="gift4_1" value="Cadeau  🎁"><br>
+                <label for="gift5_1">Cadeau 5 :</label><input type="text" id="gift5_1" value="Cadeau  🎁"><br>
+                <label for="gift6_1">Cadeau 6 :</label><input type="text" id="gift6_1" value="Cadeau  🎁"><br>
+                <label for="gift7_1">Cadeau 7 :</label><input type="text" id="gift7_1" value="Cadeau  🎁"><br>
+                <label for="gift8_1">Cadeau 8 :</label><input type="text" id="gift8_1" value="Cadeau  🎁"><br>
+                <label for="gift9_1">Cadeau 9 :</label><input type="text" id="gift9_1" value="Cadeau  🎁"><br>
+                <label for="gift10_1">Cadeau 10 :</label><input type="text" id="gift10_1" value="Cadeau  🎁"><br>
+                <label for="gift11_1">Cadeau 11 :</label><input type="text" id="gift11_1" value="Cadeau  🎁"><br>
+                <label for="gift12_1">Cadeau 12 :</label><input type="text" id="gift12_1" value="Cadeau  🎁"><br>
                     <!-- Champs pour les cadeaux 1 à 12 pour Roue 3 -->
-                    <label for="gift1_3">Cadeau 1 :</label><input type="text" id="gift1_3" value="Cadeau  🎁"><br>
-                    <label for="gift2_3">Cadeau 2 :</label><input type="text" id="gift2_3" value="Cadeau  🎁"><br>
-                    <label for="gift3_3">Cadeau 3 :</label><input type="text" id="gift3_3" value="Cadeau  🎁"><br>
-                    <label for="gift4_3">Cadeau 4 :</label><input type="text" id="gift4_3" value="Cadeau  🎁"><br>
-                    <label for="gift5_3">Cadeau 5 :</label><input type="text" id="gift5_3" value="Cadeau  🎁"><br>
-                    <label for="gift6_3">Cadeau 6 :</label><input type="text" id="gift6_3" value="Cadeau  🎁"><br>
-                    <label for="gift7_3">Cadeau 7 :</label><input type="text" id="gift7_3" value="Cadeau  🎁"><br>
-                    <label for="gift8_3">Cadeau 8 :</label><input type="text" id="gift8_3" value="Cadeau  🎁"><br>
-                    <label for="gift9_3">Cadeau 9 :</label><input type="text" id="gift9_3" value="Cadeau  🎁"><br>
-                    <label for="gift10_3">Cadeau 10 :</label><input type="text" id="gift10_3" value="Cadeau  🎁"><br>
-                    <label for="gift11_3">Cadeau 11 :</label><input type="text" id="gift11_3" value="Cadeau  🎁"><br>
-                    <label for="gift12_3">Cadeau 12 :</label><input type="text" id="gift12_3" value="Cadeau  🎁"><br>
-                </div>
+                <!-- Ajout des champs pour Roue 3 ici -->
+                <!-- Utilisation de boucle ou de copie manuelle pour remplir les champs -->
             </div>
-            <button id="saveButton">Sauvegarder</button>
+            <div class="popup-right">
+                <h3>Roue 2</h3>
+                <label for="gift1_2">Cadeau 1 :</label><input type="text" id="gift1_2" value="Cadeau  🎁"><br>
+                <label for="gift2_2">Cadeau 2 :</label><input type="text" id="gift2_2" value="Cadeau  🎁"><br>
+                <label for="gift3_2">Cadeau 3 :</label><input type="text" id="gift3_2" value="Cadeau  🎁"><br>
+                <label for="gift4_2">Cadeau 4 :</label><input type="text" id="gift4_2" value="Cadeau  🎁"><br>
+                <label for="gift5_2">Cadeau 5 :</label><input type="text" id="gift5_2" value="Cadeau  🎁"><br>
+                <label for="gift6_2">Cadeau 6 :</label><input type="text" id="gift6_2" value="Cadeau  🎁"><br>
+                <label for="gift7_2">Cadeau 7 :</label><input type="text" id="gift7_2" value="Cadeau  🎁"><br>
+                <label for="gift8_2">Cadeau 8 :</label><input type="text" id="gift8_2" value="Cadeau  🎁"><br>
+                <label for="gift9_2">Cadeau 9 :</label><input type="text" id="gift9_2" value="Cadeau  🎁"><br>
+                <label for="gift10_2">Cadeau 10 :</label><input type="text" id="gift10_2" value="Cadeau  🎁"><br>
+                <label for="gift11_2">Cadeau 11 :</label><input type="text" id="gift11_2" value="Cadeau  🎁"><br>
+                <label for="gift12_2">Cadeau 12 :</label><input type="text" id="gift12_2" value="Cadeau  🎁"><br>
+            </div>
         </div>
+        <div class="popup-section">
+            <div class="popup-left">
+                <h3>Roue 1</h3>
+                <label for="gift1_3">Cadeau 1 :</label><input type="text" id="gift1_3" value="Cadeau  🎁"><br>
+                <label for="gift2_3">Cadeau 2 :</label><input type="text" id="gift2_3" value="Cadeau  🎁"><br>
+                <label for="gift3_3">Cadeau 3 :</label><input type="text" id="gift3_3" value="Cadeau  🎁"><br>
+                <label for="gift4_3">Cadeau 4 :</label><input type="text" id="gift4_3" value="Cadeau  🎁"><br>
+                <label for="gift5_3">Cadeau 5 :</label><input type="text" id="gift5_3" value="Cadeau  🎁"><br>
+                <label for="gift6_3">Cadeau 6 :</label><input type="text" id="gift6_3" value="Cadeau  🎁"><br>
+                <label for="gift7_3">Cadeau 7 :</label><input type="text" id="gift7_3" value="Cadeau  🎁"><br>
+                <label for="gift8_3">Cadeau 8 :</label><input type="text" id="gift8_3" value="Cadeau  🎁"><br>
+                <label for="gift9_3">Cadeau 9 :</label><input type="text" id="gift9_3" value="Cadeau  🎁"><br>
+                <label for="gift10_3">Cadeau 10 :</label><input type="text" id="gift10_3" value="Cadeau  🎁"><br>
+                <label for="gift11_3">Cadeau 11 :</label><input type="text" id="gift11_3" value="Cadeau  🎁"><br>
+                <label for="gift12_3">Cadeau 12 :</label><input type="text" id="gift12_3" value="Cadeau  🎁"><br>
+            </div>
+        </div>
+        <button id="saveButton">Sauvegarder</button>
     </div>
+</div>
 
     <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
     <script>
