--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                 <!-- Ajout des champs pour Roue 3 ici -->
                 <!-- Utilisation de boucle ou de copie manuelle pour remplir les champs -->
             </div>
-            <div class="popup-right">
+            <div class="popup-middle">
                 <h3>Roue 2</h3>
                 <label for="gift1_2">Cadeau 1 :</label><input type="text" id="gift1_2" value="Cadeau  🎁"><br>
                 <label for="gift2_2">Cadeau 2 :</label><input type="text" id="gift2_2" value="Cadeau  🎁"><br>
@@ -222,7 +222,7 @@
             </div>
         </div>
         <div class="popup-section">
-            <div class="popup-left">
+            <div class="popup-right">
                 <h3>Roue 1</h3>
                 <label for="gift1_3">Cadeau 1 :</label><input type="text" id="gift1_3" value="Cadeau  🎁"><br>
                 <label for="gift2_3">Cadeau 2 :</label><input type="text" id="gift2_3" value="Cadeau  🎁"><br>
