--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
     <div class="popup-content">
         <h2>Personnalisez les cadeaux</h2>
         <div class="popup-section">
-            <div class="popup-left">
+            <div class="wheel-settings">
                 <h3>Roue 3</h3>
                 <label for="gift1_1">Cadeau 1 :</label><input type="text" id="gift1_1" value="Cadeau  🎁"><br>
                 <label for="gift2_1">Cadeau 2 :</label><input type="text" id="gift2_1" value="Cadeau  🎁"><br>
@@ -205,7 +205,7 @@
                 <!-- Ajout des champs pour Roue 3 ici -->
                 <!-- Utilisation de boucle ou de copie manuelle pour remplir les champs -->
             </div>
-            <div class="popup-middle">
+            <div class="wheel-settings">
                 <h3>Roue 2</h3>
                 <label for="gift1_2">Cadeau 1 :</label><input type="text" id="gift1_2" value="Cadeau  🎁"><br>
                 <label for="gift2_2">Cadeau 2 :</label><input type="text" id="gift2_2" value="Cadeau  🎁"><br>
@@ -222,7 +222,7 @@
             </div>
         </div>
         <div class="popup-section">
-            <div class="popup-right">
+            <div class="wheel-settings">
                 <h3>Roue 1</h3>
                 <label for="gift1_3">Cadeau 1 :</label><input type="text" id="gift1_3" value="Cadeau  🎁"><br>
                 <label for="gift2_3">Cadeau 2 :</label><input type="text" id="gift2_3" value="Cadeau  🎁"><br>
