--- a/index.html
+++ b/index.html
@@ -189,18 +189,18 @@
         <div class="popup-section">
             <div class="wheel-settings">
                 <h3>Roue 3</h3>
-                <label for="gift1_1">Cadeau 1 :</label><input type="text" id="gift1_1" value="Cadeau  🎁"><br>
-                <label for="gift2_1">Cadeau 2 :</label><input type="text" id="gift2_1" value="Cadeau  🎁"><br>
-                <label for="gift3_1">Cadeau 3 :</label><input type="text" id="gift3_1" value="Cadeau  🎁"><br>
-                <label for="gift4_1">Cadeau 4 :</label><input type="text" id="gift4_1" value="Cadeau  🎁"><br>
-                <label for="gift5_1">Cadeau 5 :</label><input type="text" id="gift5_1" value="Cadeau  🎁"><br>
+                <label for="gift1_1">Cadeau 1 :</label><input type="text" id="gift1_1" value="50€ 🤑"><br>
+                <label for="gift2_1">Cadeau 2 :</label><input type="text" id="gift2_1" value="Lunch Anais 🍔"><br>
+                <label for="gift3_1">Cadeau 3 :</label><input type="text" id="gift3_1" value="100€ 🤑"><br>
+                <label for="gift4_1">Cadeau 4 :</label><input type="text" id="gift4_1" value="Pins 🥕"><br>
+                <label for="gift5_1">Cadeau 5 :</label><input type="text" id="gift5_1" value="30€ 🤑"><br>
                 <label for="gift6_1">Cadeau 6 :</label><input type="text" id="gift6_1" value="Cadeau  🎁"><br>
-                <label for="gift7_1">Cadeau 7 :</label><input type="text" id="gift7_1" value="Cadeau  🎁"><br>
-                <label for="gift8_1">Cadeau 8 :</label><input type="text" id="gift8_1" value="Cadeau  🎁"><br>
-                <label for="gift9_1">Cadeau 9 :</label><input type="text" id="gift9_1" value="Cadeau  🎁"><br>
-                <label for="gift10_1">Cadeau 10 :</label><input type="text" id="gift10_1" value="Cadeau  🎁"><br>
-                <label for="gift11_1">Cadeau 11 :</label><input type="text" id="gift11_1" value="Cadeau  🎁"><br>
-                <label for="gift12_1">Cadeau 12 :</label><input type="text" id="gift12_1" value="Cadeau  🎁"><br>
+                <label for="gift7_1">Cadeau 7 :</label><input type="text" id="gift7_1" value="100€ 🤑"><br>
+                <label for="gift8_1">Cadeau 8 :</label><input type="text" id="gift8_1" value="Lunch Offert 🍔"><br>
+                <label for="gift9_1">Cadeau 9 :</label><input type="text" id="gift9_1" value="30€ 🤑"><br>
+                <label for="gift10_1">Cadeau 10 :</label><input type="text" id="gift10_1" value="Training Pierre"><br>
+                <label for="gift11_1">Cadeau 11 :</label><input type="text" id="gift11_1" value="3€/sem ILS/Y"><br>
+                <label for="gift12_1">Cadeau 12 :</label><input type="text" id="gift12_1" value="20€ 🤑"><br>
                     <!-- Champs pour les cadeaux 1 à 12 pour Roue 3 -->
                 <!-- Ajout des champs pour Roue 3 ici -->
                 <!-- Utilisation de boucle ou de copie manuelle pour remplir les champs -->
