--- a/index.html
+++ b/index.html
@@ -199,43 +199,43 @@
                 <label for="gift8_1">Cadeau 8 :</label><input type="text" id="gift8_1" value="Lunch Offert 🍔"><br>
                 <label for="gift9_1">Cadeau 9 :</label><input type="text" id="gift9_1" value="30€ 🤑"><br>
                 <label for="gift10_1">Cadeau 10 :</label><input type="text" id="gift10_1" value="Training Pierre"><br>
-                <label for="gift11_1">Cadeau 11 :</label><input type="text" id="gift11_1" value="3€/sem ILS/Y"><br>
-                <label for="gift12_1">Cadeau 12 :</label><input type="text" id="gift12_1" value="20€ 🤑"><br>
+                <label for="gift11_1">Cadeau 11 :</label><input type="text" id="gift11_1" value="30€ 🤑"><br>
+                <label for="gift12_1">Cadeau 12 :</label><input type="text" id="gift12_1" value="3€/sem ILS/Y"><br>
                     <!-- Champs pour les cadeaux 1 à 12 pour Roue 3 -->
                 <!-- Ajout des champs pour Roue 3 ici -->
                 <!-- Utilisation de boucle ou de copie manuelle pour remplir les champs -->
             </div>
             <div class="wheel-settings">
                 <h3>Roue 2</h3>
-                <label for="gift1_2">Cadeau 1 :</label><input type="text" id="gift1_2" value="Cadeau  🎁"><br>
-                <label for="gift2_2">Cadeau 2 :</label><input type="text" id="gift2_2" value="Cadeau  🎁"><br>
-                <label for="gift3_2">Cadeau 3 :</label><input type="text" id="gift3_2" value="Cadeau  🎁"><br>
-                <label for="gift4_2">Cadeau 4 :</label><input type="text" id="gift4_2" value="Cadeau  🎁"><br>
-                <label for="gift5_2">Cadeau 5 :</label><input type="text" id="gift5_2" value="Cadeau  🎁"><br>
-                <label for="gift6_2">Cadeau 6 :</label><input type="text" id="gift6_2" value="Cadeau  🎁"><br>
-                <label for="gift7_2">Cadeau 7 :</label><input type="text" id="gift7_2" value="Cadeau  🎁"><br>
-                <label for="gift8_2">Cadeau 8 :</label><input type="text" id="gift8_2" value="Cadeau  🎁"><br>
-                <label for="gift9_2">Cadeau 9 :</label><input type="text" id="gift9_2" value="Cadeau  🎁"><br>
-                <label for="gift10_2">Cadeau 10 :</label><input type="text" id="gift10_2" value="Cadeau  🎁"><br>
-                <label for="gift11_2">Cadeau 11 :</label><input type="text" id="gift11_2" value="Cadeau  🎁"><br>
-                <label for="gift12_2">Cadeau 12 :</label><input type="text" id="gift12_2" value="Cadeau  🎁"><br>
+                <label for="gift1_2">Cadeau 1 :</label><input type="text" id="gift1_2" value="Airpods 🎵"><br>
+                <label for="gift2_2">Cadeau 2 :</label><input type="text" id="gift2_2" value="Train 150€ 🚆"><br>
+                <label for="gift3_2">Cadeau 3 :</label><input type="text" id="gift3_2" value="Dinner 2pers 🍷"><br>
+                <label for="gift4_2">Cadeau 4 :</label><input type="text" id="gift4_2" value="Place concert 🎸"><br>
+                <label for="gift5_2">Cadeau 5 :</label><input type="text" id="gift5_2" value="Place disney 🎟️"><br>
+                <label for="gift6_2">Cadeau 6 :</label><input type="text" id="gift6_2" value="200€ Gift Card 🎁"><br>
+                <label for="gift7_2">Cadeau 7 :</label><input type="text" id="gift7_2" value="Gourde Stanley 🥤"><br>
+                <label for="gift8_2">Cadeau 8 :</label><input type="text" id="gift8_2" value="Lunch Adeline 🍔"><br>
+                <label for="gift9_2">Cadeau 9 :</label><input type="text" id="gift9_2" value="1 journée APP 🟢"><br>
+                <label for="gift10_2">Cadeau 10 :</label><input type="text" id="gift10_2" value="Un Mégaphone 📢"><br>
+                <label for="gift11_2">Cadeau 11 :</label><input type="text" id="gift11_2" value="100€ Gift Card 🎁"><br>
+                <label for="gift12_2">Cadeau 12 :</label><input type="text" id="gift12_2" value="Polaroid 📷"><br>
             </div>
         </div>
         <div class="popup-section">
             <div class="wheel-settings">
                 <h3>Roue 1</h3>
-                <label for="gift1_3">Cadeau 1 :</label><input type="text" id="gift1_3" value="Cadeau  🎁"><br>
-                <label for="gift2_3">Cadeau 2 :</label><input type="text" id="gift2_3" value="Cadeau  🎁"><br>
-                <label for="gift3_3">Cadeau 3 :</label><input type="text" id="gift3_3" value="Cadeau  🎁"><br>
-                <label for="gift4_3">Cadeau 4 :</label><input type="text" id="gift4_3" value="Cadeau  🎁"><br>
-                <label for="gift5_3">Cadeau 5 :</label><input type="text" id="gift5_3" value="Cadeau  🎁"><br>
-                <label for="gift6_3">Cadeau 6 :</label><input type="text" id="gift6_3" value="Cadeau  🎁"><br>
-                <label for="gift7_3">Cadeau 7 :</label><input type="text" id="gift7_3" value="Cadeau  🎁"><br>
-                <label for="gift8_3">Cadeau 8 :</label><input type="text" id="gift8_3" value="Cadeau  🎁"><br>
-                <label for="gift9_3">Cadeau 9 :</label><input type="text" id="gift9_3" value="Cadeau  🎁"><br>
-                <label for="gift10_3">Cadeau 10 :</label><input type="text" id="gift10_3" value="Cadeau  🎁"><br>
-                <label for="gift11_3">Cadeau 11 :</label><input type="text" id="gift11_3" value="Cadeau  🎁"><br>
-                <label for="gift12_3">Cadeau 12 :</label><input type="text" id="gift12_3" value="Cadeau  🎁"><br>
+                <label for="gift1_3">Cadeau 1 :</label><input type="text" id="gift1_3" value="Mini Video Proj 📽️"><br>
+                <label for="gift2_3">Cadeau 2 :</label><input type="text" id="gift2_3" value="Iphone 600€ 🤳"><br>
+                <label for="gift3_3">Cadeau 3 :</label><input type="text" id="gift3_3" value="Billet Avion 400€ ✈️"><br>
+                <label for="gift4_3">Cadeau 4 :</label><input type="text" id="gift4_3" value="Dommage 😪"><br>
+                <label for="gift5_3">Cadeau 5 :</label><input type="text" id="gift5_3" value="Apple Watch ⌚"><br>
+                <label for="gift6_3">Cadeau 6 :</label><input type="text" id="gift6_3" value="Dyson 🧹"><br>
+                <label for="gift7_3">Cadeau 7 :</label><input type="text" id="gift7_3" value="Disney Ultimate 🎡"><br>
+                <label for="gift8_3">Cadeau 8 :</label><input type="text" id="gift8_3" value="PS5 🎮"><br>
+                <label for="gift9_3">Cadeau 9 :</label><input type="text" id="gift9_3" value="Une nuit d'hotel 🛌"><br>
+                <label for="gift10_3">Cadeau 10 :</label><input type="text" id="gift10_3" value="Tasse Noel 🥤"><br>
+                <label for="gift11_3">Cadeau 11 :</label><input type="text" id="gift11_3" value="Chausette Noel 🎄"><br>
+                <label for="gift12_3">Cadeau 12 :</label><input type="text" id="gift12_3" value="Surprise 🎁"><br>
             </div>
         </div>
         <button id="saveButton">Sauvegarder</button>
