--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                 <label for="gift7_3">Cadeau 7 :</label><input type="text" id="gift7_3" value="Disney Ultimate 🎡"><br>
                 <label for="gift8_3">Cadeau 8 :</label><input type="text" id="gift8_3" value="PS5 🎮"><br>
                 <label for="gift9_3">Cadeau 9 :</label><input type="text" id="gift9_3" value="Une nuit d'hotel 🛌"><br>
-                <label for="gift10_3">Cadeau 10 :</label><input type="text" id="gift10_3" value="Tasse Noel 🥤"><br>
+                <label for="gift10_3">Cadeau 10 :</label><input type="text" id="gift10_3" value="Airpods Max 🎧"><br>
                 <label for="gift11_3">Cadeau 11 :</label><input type="text" id="gift11_3" value="Chausette Noel 🎄"><br>
                 <label for="gift12_3">Cadeau 12 :</label><input type="text" id="gift12_3" value="Surprise 🎁"><br>
             </div>
