--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                 <label for="gift6_2">Cadeau 6 :</label><input type="text" id="gift6_2" value="200€ Gift Card 🎁"><br>
                 <label for="gift7_2">Cadeau 7 :</label><input type="text" id="gift7_2" value="Gourde Stanley 🥤"><br>
                 <label for="gift8_2">Cadeau 8 :</label><input type="text" id="gift8_2" value="Lunch Adeline 🍔"><br>
-                <label for="gift9_2">Cadeau 9 :</label><input type="text" id="gift9_2" value="1 journée APP 🟢"><br>
+                <label for="gift9_2">Cadeau 9 :</label><input type="text" id="gift9_2" value="4€ Y/U 2.5€ AY"><br>
                 <label for="gift10_2">Cadeau 10 :</label><input type="text" id="gift10_2" value="Un Mégaphone 📢"><br>
                 <label for="gift11_2">Cadeau 11 :</label><input type="text" id="gift11_2" value="100€ Gift Card 🎁"><br>
                 <label for="gift12_2">Cadeau 12 :</label><input type="text" id="gift12_2" value="Polaroid 📷"><br>
